Enable setting of custom routes.

Had to add our own IntValidator, as QIntValidator permits periods
and commas as thousand separator, and we don't want that in
prefix or metric settings.

BUG: 257920
to the reporter: IP != route
(cherry picked from commit b36c20a02808057b713320e204c037c95795574a)